<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckSchedule">

    <ImageView
        android:id="@+id/navCheck"
        android:layout_width="56dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/baseline_navigate_before_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderHead"
        android:layout_width="242dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/order_details"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp">

        <TextView
            android:id="@+id/txtOrderEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/orderEmail"
            android:layout_width="4dp"
            android:layout_height="50dp"
            android:hint="Email"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnDecline"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/decline"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="#de4843"/>
        <Button
            android:id="@+id/btnApprove"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:text="@string/approve"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="#48c76a"/>
    </LinearLayout>

</LinearLayout>