<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LaundryStatus">

    <ImageView
        android:id="@+id/navStatus"
        android:layout_width="56dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/baseline_navigate_before_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statusHead"
        android:layout_width="242dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="41dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_status"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtStatusEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="4dp"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:hint="@string/email_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="135dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMainStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="** Your Order has been"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMainStatus2"
            android:layout_width="146dp"
            android:layout_height="42dp"
            android:textColor="#48c76a"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="Dear Customer, once you recieved the Delivery Confirmation Email, please be kind enough to send your feedback for us."
        android:textColor="#767070"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/btnFeed"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="40dp"
        android:text="@string/feedback"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        android:backgroundTint="#F4F900"/>


</LinearLayout>