<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".OrderSummary">


    <ImageView
        android:id="@+id/navSummary"
        android:layout_width="56dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/baseline_navigate_before_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order Summary"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="379dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#F4F900"
        app:cardElevation="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtSumOrderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User Email :"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/sumOrderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#454343"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="226dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtSumShop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/shop"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sumShop"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#454343"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtSumClothes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_of_clothes"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/sumClothes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#454343"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtSumFragrance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragrance"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/sumFragrance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#454343"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtSumTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amount"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/sumTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#454343"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtSumPick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_up_date"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/sumPick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#454343"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtSumDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_date"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/sumDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#454343"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="65dp"
            android:text="Confirm"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="#de4843"/>

    </LinearLayout>
</LinearLayout>

